@@ -1,0 +1,63 @@
+package com.opower.persistence.jpile.sample;
+
+import javax.persistence.Column;
+import javax.persistence.Embeddable;
+
+/**
+ * A sample pojo object for testing.
+ *
+ * @author ali.bozzelli
+ */
+@Embeddable
+public class Address {
+    private String streetNumber;
+    private String street;
+    private String city;
+    private String state;
+    private String zipCode;
+
+    @Column(name = "street_number")
+    public String getStreetNumber() {
+        return streetNumber;
+    }
+
+    public void setStreetNumber(String streetNumber) {
+        this.streetNumber = streetNumber;
+    }
+
+    @Column(name = "street")
+    public String getStreet() {
+        return street;
+    }
+
+    public void setStreet(String street) {
+        this.street = street;
+    }
+
+    @Column(name = "city")
+    public String getCity() {
+        return city;
+    }
+
+    public void setCity(String city) {
+        this.city = city;
+    }
+
+    @Column(name = "state")
+    public String getState() {
+        return state;
+    }
+
+    public void setState(String state) {
+        this.state = state;
+    }
+
+    @Column(name = "zip_code")
+    public String getZipCode() {
+        return zipCode;
+    }
+
+    public void setZipCode(String zipCode) {
+        this.zipCode = zipCode;
+    }
+}
