@@ -4,6 +4,11 @@ CREATE TABLE `contact` (
   `first_name` varchar(100) NOT NULL DEFAULT '',
   `last_name` varchar(100) NOT NULL DEFAULT '',
   `type` enum('PRIMARY', 'SECONDARY') NOT NULL,
+  `street_number` varchar(24) NOT NULL,
+  `street` varchar(48) NOT NULL,
+  `city` varchar(48) NOT NULL,
+  `state` char(2) NOT NULL,
+  `zip_code` char(5) NOT NULL,
   PRIMARY KEY (`customer_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
@@ -29,6 +34,7 @@ DROP TABLE IF EXISTS `product`;
 CREATE TABLE `product` (
   `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
   `customer_id` int(11) NOT NULL,
+  `supplier_id` int(11) NOT NULL,
   `purchased_on` datetime NOT NULL,
   `title` varchar(100) NOT NULL DEFAULT '',
   `description` varchar(100) NOT NULL DEFAULT '',
@@ -37,6 +43,17 @@ CREATE TABLE `product` (
   PRIMARY KEY (`id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
+DROP TABLE IF EXISTS `supplier`;
+CREATE TABLE `supplier` (
+  `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
+  `name` varchar(100) NOT NULL,
+  `street_number` varchar(24) NOT NULL,
+  `street` varchar(48) NOT NULL,
+  `city` varchar(48) NOT NULL,
+  `state` char(2) NOT NULL,
+  `zip_code` char(5) NOT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 
 DROP TABLE IF EXISTS `binary_data`;
 CREATE TABLE `binary_data` (
